[package]
name = "float_test"
version = "0.9.0"
edition = "2021"
authors = ["Andrew Powers-Holmes <aholmes@omnom.net>"]
license = "MIT"
readme = "README.md"
keywords = ["float", "fractal", "mandelbrot", "toy"]
resolver = "2"
build = "build.rs"

[dependencies]
num = "0.4"
crossterm = "0.22"
shadow-rs = "0.11.0"

[build-dependencies]
shadow-rs = "0.11.0"
